# api_v1/ue_server/ue_server/models/__init__.py
@@ -1,2 +1,5 @@
 # flake8: noqa
 # import models into model package
+from ue_server.models.cell_descriptor import CellDescriptor
+from ue_server.models.cell_gnb_id_power_put_request import CellGnbIdPowerPutRequest
+from ue_server.models.ueimsi_handover_put_request import UEIMSIHandoverPutRequest
